syntax = "proto3";

package assistant.v1;

message ChatRequest {
  string session_id = 1;
  string message = 2;
  bytes audio_data = 3;
}

message ChatResponse {
  string session_id = 1;
  string text_response = 2;
  bytes audio_data = 3;
  bool is_final = 4;
}

service AssistantService {
  rpc Chat(ChatRequest) returns (stream ChatResponse);
}